feat: init app layout

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -16,6 +16,7 @@
     }
   },
   "paper": {
+    "daily": "Daily Papers",
     "title": "Paper",
     "author": "Author",
     "abstract": "Abstract",
