feat: init custom shape for crawler

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -22,5 +22,10 @@
     "abstract": "Abstract",
     "published": "Published",
     "search": "Search Papers"
+  },
+  "crawler": {
+    "type": {
+      "huggingface": "Hugging Face"
+    }
   }
 }
