--- a/src/locales/zh/common.json
+++ b/src/locales/zh/common.json
@@ -27,5 +27,16 @@
     "type": {
       "huggingface": "Hugging Face"
     }
+  },
+  "date": {
+    "today": "今天",
+    "yesterday": "昨天",
+    "monday": "周一",
+    "tuesday": "周二",
+    "wednesday": "周三",
+    "thursday": "周四",
+    "friday": "周五",
+    "saturday": "周六",
+    "sunday": "周日"
   }
 }
