feat: init crawl/seed shape proc

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -26,7 +26,8 @@
   "crawler": {
     "type": {
       "huggingface": "Hugging Face"
-    }
+    },
+    "all": "All Topics"
   },
   "date": {
     "today": "Today",
